--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="row">
               <div class="three wide center aligned column">
                 <!-- Avatar -->
+                <img class="avatar" src="lucifer.jpg" alt="My majesty">
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
