--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <title>Résumé</title>
   </head>
   <body>
@@ -14,45 +13,51 @@
             <div class="row">
               <div class="three wide center aligned column">
                 <!-- Avatar -->
-                <img class="avatar" src="lucifer.jpg" alt="My majesty">
+                <div class="avatar-wrapper">
+                <object class="avatar" data="lucifer.jpg" role="img" aria-label="My majesty"></object>
               </div>
+            </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
                     <!-- Name, job, contacts -->
-                    <h1 class="name fw-bold">Lucifer Morningstar (Dennitsa)</h1>
+                    <h1 class="name">Lucifer Morningstar (Dennitsa)</h1>
                     <p>Real Name: Samael, the Lightbringer, also known as the Devil and Satan</p>
                     
-                    <div class="job">State Assistant Investigation <br> Devil</div>
+                    <div class="job">Detective</div>
                     
                     <ul class="contacts">
                       <li>
-                        <a href="https://mail.google.com/" rel="author" class="mail"></a>
+                        <a href="https://mail.google.com/" rel="author" class="mail">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                           <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
                         </svg>
                         <span>ActuallyDevil</span>
+                      </a>
                       </li>
                       <li>
-                        <a href="https://www.instagram.com/officialtomellis/?hl=ru" rel="author" class="instagram"></a>
+                        <a href="https://www.instagram.com/officialtomellis/?hl=ru" rel="author" class="instagram">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                           <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
                         </svg>
                         <span>RealDevil</span>
+                      </a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/TomEllis78/" rel="author" class="facebook"></a>
+                        <a href="https://www.facebook.com/TomEllis78/" rel="author" class="facebook">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                         </svg>
                         <span>RealDevil</span>
+                      </a>
                       </li>
                       <li>
-                        <a href="https://twitter.com/account_lucifer" rel="author" class="twitter"></a>
+                        <a href="https://twitter.com/account_lucifer" rel="author" class="twitter">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
                           <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
                         </svg>
                         <span>account_lucifer</span>
+                      </a>
                       </li>
                     </ul>
                   </div>
@@ -61,8 +66,8 @@
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <h2>Resume &#128520;</h2>
-                    <p>&mdash; I am a fallen angel and the former ruler of Hell. Now I live on Earth and run the Lux nightclub, while simultaneously investigating crimes, which helps me to punish sinners.</p>
+                    <h2>Résumé &#128520;</h2>
+                    <p>&mdash; Hello, bad guys! I am a fallen angel and the former ruler of Hell. Now I live on Earth and run the Lux nightclub, while simultaneously investigating crimes, which helps me to punish sinners.</p>
                   </div>
                 </div>
               </div>
@@ -75,10 +80,205 @@
             <div class="row">
               <div class="ten wide column">
                 <!-- Experience -->
+                <h3>Experience</h3>
+                <h6>Recent</h6>
+                <ul class="timeline">
+                  <!-- Events -->
+                  <li>
+                    Club Manager Lux &#127865;
+                  </li>
+
+                  <li>
+                    State Assistant Investigation &#128373;
+                  </li>
+                </ul>
+                <!-- Timeline (recent events) -->
+                <h6>Back then</h6>
+                <!-- Timeline (older events) -->
+                <ul class="timeline">
+                  <!-- Events -->
+                  <li>
+                    Ruler of Hell. &#129332;
+                  </li>
+                </ul>
+
+                <h3>Personal live</h3>
+                <ul class="timeline">
+                  <!-- Events -->
+                  <li>
+                    <p><em>Before the creation of the universe</em></p>
+                    <p>I was born</p>
+                  </li>
+                  <li>
+                    <p><em>When I was an angel in heaven</em></p>
+                    <p>I started a rebellion against the Father (God)</p>
+                  </li>
+
+                  <li>
+                    <p><em>Also millions year ago</em></p>
+                  <ul>
+                  <li class="details">
+                    <input type="checkbox" id="hell">
+                    <label for="hell" class="summary">The conspiracy failed, and God, angry at my behavior, sent Me to Hell, so that there I would watch over the souls of sinners forever.</label>
+                    <div>
+                      <ul>
+                        <li>I'm chasing sinners on a Hell's noose</li>
+                        <li>I exhausting sinners</li>
+                        <li>Controlling demons</li>
+                      </ul>
+                    </div>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <p><em>My hard times hundreds of years ago</em></p>
+                    <p>Made friends in hell with the demon <strong> <a href="https://lucifer.fandom.com/wiki/Mazikeen" rel="external"> Mazikeen</a>&#128127;</strong></p>
+                    <p>Mazikeen cut off my wings at my own request.</p>
+                  </li>
+
+                  <li>
+                    <p><em>2015 year</em></p>
+                    <p>I left Hell and settled in Los Angeles</p>
+                    <p>I become a nightclub owner, operating an establishment called Lux</p>
+                  </li>
+
+                  <li>
+                    <p><em>2016 year</em></p>
+                    <p>I witnessed the murder of a close acquaintance of my.</p>
+                    <p>I met <strong><a href="https://lucifer.fandom.com/wiki/Chloe_Decker" rel="external"> Chloe Decker</a></strong>	&#128110;&#8205;&#9792;&#65039; </p>
+                    <ul>
+                      <li class="details">
+                        <input type="checkbox" id="work">
+                        <label for="work" class="summary">I started working with LAPD detective Chloe Decker.</label>
+                        <div>
+                          <ul>
+                            <li>Thanks to me, we solved crimes easily &#128373;</li>
+                            <li>Also we were catching criminals</li>
+                            <li> This position gave me the opportunity to punish sinners (like the good old days)</li>
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+
+                    <li>
+                      <p><em>2017 year</em></p>
+                      <p>I fell in love with Chloe &#10084;</p>
+                      <p>I killed Cain(Sinnerman, the world's first murderer)</p>
+                      <p>My Devil face returned, and Chloe witnessed it.</p>
+                    </li>
+                    <li>
+                      <p><em>2018 year</em></p>
+                      <p>I started dating Eve (yes, the very first woman on Earth)</p>
+                      <p>Parted with Eve</p>
+                    </li>
+                    <li>
+                      <p><em>2019 year</em></p>
+                      <p>Demons began to rise from hell and I went back there to put things in order</p>
+                    </li>
+                    <li>
+                      <p><em>2020</em></p>
+                      <p>Returned to Earth</p>
+                    </li>
+                </ul>
               </div>
+
               <div class="six wide column">
                 <!-- Languages -->
+                <section>
+                  <h3>Languages</h3>
+                  <p class="tags small">&#127757; All languages of the earthly world <br>
+                    &#127761; Demons Language</p>
+                </section>
                 <!-- Skills -->
+                <section>
+                  <h3>Powers</h3>
+                  <p class="tags small">Recognition of other people's innermost desires;
+                 Superhuman Strength; 
+                 Superhuman Speed; 
+                 Superhuman Endurance; 
+                 Superhuman Reflexes; 
+                 Superhuman Dexterity; 
+                 Immortality; 
+                 Invulnerability; 
+                 Temptation Inducement; 
+                 Regenerative Healing Factor; 
+                 Devil Form Manifestation; 
+                 Flight; 
+                 Resurrection; 
+                 Hell Loop Control</p>
+                </section>
+
+                <section>
+                  <h3>Abilities</h3>
+                  <p class="tags small">Master Hand-To-Hand Combatant; 
+                  Master Manipulator; 
+                  Skilled Detective; 
+                  Omnilingualism; 
+                  Exceptional Talent in the Arts; 
+                  Dimensional Awareness</p>
+                </section>
+
+                <section>
+                  <h3>Weaknesses</h3>
+                  <p>Former Weaknesses: </p>
+                  <ul>
+                    <li class="details">
+                      <input type="checkbox" id="formerWeakness1">
+                      <label for="formerWeakness1" class="summary">Chloe Decker</label>
+                      <div>
+                        <p>Chloe is insensitive to My preternatural charm. <br> When she is around, she makes Me vulnerable to ordinary means of harm.</p>
+                      </div>
+                    </li>
+                    <li class="details">
+                      <input type="checkbox" id="formerWeakness2">
+                      <label for="formerWeakness2" class="summary">The Flaming Sword</label>
+                      <div>
+                        <p>Azrael's blade, which is also a part of the Flaming Sword, is said to be able to completely eradicate angels. The angel would be permanently gone, no Heaven nor Hell, and couldn't be resurrected.</p>
+                      </div>
+                    </li>
+                  </ul>
+                  <br>
+                  <p>Banishing/Killing:</p>
+                  <ul>
+                    <li class="details">
+                      <input type="checkbox" id="banishing1">
+                      <label for="banishing1" class="summary">Demon Daggers Forged In Hell</label>
+                      <div>
+                        <p>These blades can cause fatal injury to an angel or a demon (I'm an angel, as you know).</p>
+                      </div>
+                    </li>
+                    <li class="details">
+                      <input type="checkbox" id="banishing2">
+                      <label for="banishing2" class="summary">Exorcism Ritual</label>
+                      <div>
+                        <p>A ritual involving a vial of some unknown substance that would send the devil to Hell forever.</p>
+                      </div>
+                    </li>
+                  </ul>
+                  <br>
+                  <p>Destroying/Eradicating:</p>
+                  <ul>
+                    <li class="details">
+                      <input type="checkbox" id="destroying1">
+                      <label for="destroying1" class="summary">God</label>
+                      <div>
+                        <p>He is God, he is omnipotent.</p>
+                      </div>
+                    </li>
+                  </ul>
+                  <br>
+                  <p>Psychological Weakness</p>
+                  <ul>
+                    <li class="details">
+                      <input type="checkbox" id="psycho-weakness">
+                      <label for="psycho-weakness" class="summary">Self-Actualization</label>
+                      <div>
+                        <p>I constantly analyze what is happening to me. Why do I sometimes lose my wings, sometimes I get them again...</p>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
                 <!-- Character -->
                 <!-- Likes -->
                 <!-- Dislikes -->
