--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </li>
                   </ul>
                   <br>
-                  <p>Psychological Weakness</p>
+                  <p>Psychological Weakness:</p>
                   <ul>
                     <li class="details">
                       <input type="checkbox" id="psycho-weakness">
@@ -279,12 +279,29 @@
                     </li>
                   </ul>
                 </section>
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
+
+                <section>
+                  <h3>LIKES</h3>
+                  <p class="tags small">
+                    Justice&#9757;
+                    Merry life&#10024;
+                    Alcohol&#129347;
+                    Sometimes drugs&#128138;
+                    Hot girls&#128111;
+                    Models&#128131;
+                    Truth&#128519;
+                    Piano&#127929;
+                  </p>
+                </section>
+
+                <section>
+                  <h3>DISLIKES</h3>
+                  <p class="tags small">
+                    My dad&#129492;
+                    Lie&#129320;
+                    Criminals&#127939;
+                  </p>
+                </section>
               </div>
             </div>
           </div>
